--- a/js-ders01/index.html
+++ b/js-ders01/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Dersleri</title>
-    <script src="index.js"></script>
+    <script src="../js-ders02/index.js"></script>
 </head>
 <body>
     <h1>Merhaba Dünya</h1>
